<resources>
    <string name="app_name">ParkIt-Client</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="label_account_details">Account Details</string>
    <string name="label_logout">Logout</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_register">Register</string>
    <string name="label_registeration">Registration Form</string>
    <string name="title_activity_registration">Register On ParkIt</string>
    <string name="label_submit_btn">Submit</string>


    <string name="label_first_name">First Name</string>
    <string name="hint_first_name">First Name …</string>
    <string name="label_last_name">Last Name</string>
    <string name="hint_last_name">Last Name …</string>
    <string name="label_contact_number">Contact Number</string>
    <string name="hint_contact_number">Contact Number …</string>
    <string name="label_address">Address</string>
    <string name="hint_address">Address …</string>
    <string name="label_vehicle_number">Vehicle\'s License Plate Number</string>
    <string name="hint_vehicle_number">Vehicle\'s License Plate Number …</string>
    <string name="label_vehicle_type">Vehicle Type</string>
    <string name="label_license">Upload an image of your driving licence</string>
    <string name="label_rc">Upload an image of your vehicle\'s RC</string>
    <string name="label_click_btn">Take a pic</string>
    <string name="label_gen_qr_code_btn">Generate QR Code</string>
    <string name="hint_message_qr">hash value …</string>
    <string name="label_balance">ParkIt Credits : </string>
    <string name="label_balance_placeholder">---</string>
    <string name="title_personal_details">Personal Details</string>
    <string name="title_vehicles">Vehicles</string>
    <string name="title_rc">Registration Certificate</string>
    <string name="label_edit">Edit</string>
    <string name="label_add_vehicle">Add</string>
    <string name="label_driving_license">Driving License</string>





    <string-array name="vehicle_types_model">
        <item>two_wheeler</item>
        <item>four_wheeler</item>
        <item>heavy_vehicle</item>
    </string-array>
    <string-array name="vehicle_types_view">
        <item>Two wheeler</item>
        <item>Four wheeler</item>
        <item>Heavy vehicle</item>
    </string-array>
    <string name="title_activity_customer_details_update">Update Account Information</string>
    <string name="label_update_details_btn">Update</string>
    <string name="title_activity_add_vehicle">Add New Vehicle</string>
    <string name="label_api_host_address">API Host Address</string>
    <string name="hint_api_host_address">host address Ex: 192.168.1.1 …</string>
    <string name="label_refresh_api">Refresh API Configuration</string>
    <string name="label_add_parkit_credits">Add ParkIt Credits</string>
    <string name="hint_coupon_code">Coupon Code …</string>
    <string name="label_apply_coupon">Apply Coupon</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="placeholder">---</string>
    <string name="label_address_multiline">Address : </string>
    <string name="label_login">Login</string>
    <string name="title_activity_login">Log Into Your ParkIt Account</string>
    <string name="label_email_id">Email ID</string>
    <string name="hint_registered_email_id">Registered email ID. Ex: abc@xyz.pqr</string>
    <string name="label_password">Password</string>
    <string name="hint_password">Password …</string>
    <string name="hint_email_id">Email ID. Ex: abc@xyz.pqr</string>
    <string name="label_choose_pass">Choose a password</string>
    <string name="hint_choose_pass">Must be at least 8 characters</string>



</resources>
