<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.parkit.parkit_client.ui.ParkItWalletFragment"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/label_balance"
            android:layout_marginTop="40dp"
            android:textSize="30dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/text_credits_balance"
            android:text="@string/label_balance_placeholder"
            android:textSize="30sp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/label_add_parkit_credits"
            android:layout_marginTop="50dp"
            android:textSize="25sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/edit_coupon_code"
            android:hint="@string/hint_coupon_code"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_apply_coupon"
            android:text="@string/label_apply_coupon"
            />

    </LinearLayout>






</FrameLayout>
