<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.parkit.parkit_client.ui.CustomerDetailsUpdateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="100"
                android:paddingTop="15dp">
                <TextView
                    android:id="@+id/label_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/label_first_name"
                    android:labelFor="@+id/edit_first_name"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:layout_weight="80"/>
                <EditText
                    android:id="@+id/edit_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_first_name"
                    android:layout_weight="20"
                    android:paddingLeft="10dp"
                    android:inputType="text"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="100">
                <TextView
                    android:id="@+id/label_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/label_last_name"
                    android:labelFor="@+id/edit_last_name"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:layout_weight="80"/>
                <EditText
                    android:id="@+id/edit_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_last_name"
                    android:layout_weight="20"
                    android:paddingLeft="10dp"
                    android:inputType="text"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="100"
                android:paddingTop="2dp">
                <TextView
                    android:id="@+id/label_contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:labelFor="@+id/edit_contact_number"
                    android:text="@string/label_contact_number"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:layout_weight="80"/>
                <EditText
                    android:id="@+id/edit_contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_contact_number"
                    android:layout_weight="20"
                    android:paddingLeft="10dp"
                    android:inputType="number"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="100"
                android:paddingTop="2dp">
                <TextView
                    android:id="@+id/label_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:labelFor="@+id/edit_address"
                    android:text="@string/label_address"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:layout_weight="80"/>
                <EditText
                    android:id="@+id/edit_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_address"
                    android:layout_weight="20"
                    android:paddingLeft="10dp"
                    android:inputType="textMultiLine"
                    />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_license"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/image_view_license"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="57"
                    android:background="@drawable/abc_popup_background_mtrl_mult"
                    />
                <Button
                    android:id="@+id/btn_license_click"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="@string/label_click_btn"
                    android:layout_weight="43"
                    />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/btn_update"
                android:text="@string/label_update_details_btn"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
