<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:orientation="vertical"
    tools:context="com.parkit.parkit_client.ui.AddVehicleActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <!--Outer Wrapper-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/root_view_add_vehicle"
            >
            <!--Vehicle Type-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_vehicle_type"
                    />
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/spinner_vehicle_type"
                    >

                </Spinner>

            </LinearLayout>


            <!--Vehicle's License Number-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_vehicle_number"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/edit_vehicle_number"
                    android:hint="@string/hint_vehicle_number"
                    android:inputType="text"
                    />

            </LinearLayout>

            <!--Vehicle's RC-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_rc"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_rc"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="190dp"
                        android:layout_height="175dp"
                        android:id="@+id/image_view_vehicle_rc"
                        android:background="@drawable/abc_popup_background_mtrl_mult"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:id="@+id/btn_rc_click"
                        android:text="@string/label_click_btn"/>

                </LinearLayout>


            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/btn_add_vehicle"
                android:text="@string/label_add_vehicle"
                android:layout_marginTop="10dp"/>


        </LinearLayout>


    </ScrollView>



</LinearLayout>
