<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.v7.widget.CardView-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ParkItNavigationDrawerTheme"
    android:background="@drawable/card_border_background"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    card_view:cardCornerRadius="4dp"
    card_view:elevation="2dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <!--Vehicle Type -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/label_vehicle_type"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/text_vehicle_type"
                android:text="@string/abc_search_hint"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/label_vehicle_number"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/text_vehicle_number"
                android:text="@string/abc_search_hint"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/title_rc"
                />
            <!--Image View -->
            <ImageView
                android:layout_width="190dp"
                android:layout_height="175dp"
                android:id="@+id/image_view_vehicle_rc"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
<!--</android.support.v7.widget.CardView>-->
